# refnet

./: 1.txt  2.txt  Cargo.toml  Makefile  README.md  init.sh  refdata.sql
frontend/: .env  index.html  package.json  vite.config.ts
frontend/src/: App.vue  components.d.ts  main.ts
frontend/src/components/: Dialog.vue  GraphChart.vue  Params.vue
refnet_core/: .env  Cargo.toml
refnet_core/.sqlx/: query-e4a8a07b44b2519d04ed1f4cb0ddb54e60c00f0b8be2f03745e7c60c4f6cd50b.json
refnet_core/src/: cite_rank.rs  data_deal.rs  gpt.rs  lib.rs  main.rs  types.rs
refnet_core/src/data_deal/: crossref.rs  sql.rs
refnet_server/: Cargo.toml
refnet_server/src/: controllers.rs  main.rs  utils.rs
