[package]
name = "refnet_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
crossref = { git = "https://github.com/rikkaka/crossref-rs", rev = "67616aefefea3c67a0dd30f25963e1736b31d035"}
dashmap = "5.5.3"
futures = "0.3.30"
hashbrown = "0.14.5"
itertools = "0.12.1"
lazy_static = "1.4.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1.37.0", features = ["rt", "full"] }
