[package]
name = "refnet_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
refnet_core = { path = "../refnet_core" }
salvo = { version = "0.67.1", features = ["anyhow", "proxy"] }
serde = "1.0.200"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
